# prefect-liveness-monitor

./: .dockerignore  .gitignore  Dockerfile  README.md  devenv.nix  main.py  pyproject.toml
.github/: renovate.json
.github/workflows/: ci.yaml
src/monitor/: config.py  controller.py  detector.py  http.py  producer.py
tests/: conftest.py  helpers.py  test_config.py  test_controller.py  test_detector.py  test_drain_lines.py  test_http.py  test_main.py  test_producer.py
