[project]
name = "prefect-liveness-monitor"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28",
    "loguru>=0.7",
    "pydantic-settings>=2",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "monitor"

[dependency-groups]
dev = [
    "hypothesis>=6",
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6",
    "pytest-mock>=3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["monitor", "main"]

[tool.basedpyright]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
extraPaths = ["src", "."]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
per-file-ignores = { "tests/**" = ["TRY003"] }

select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "ERA",   # eradicate (no commented-out code)
    "N",     # pep8-naming
    "PERF",  # perflint
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "PTH",   # flake8-use-pathlib
    "RET",   # flake8-return
    "RSE",   # flake8-raise
    "RUF",   # ruff-specific rules
    "T20",   # flake8-print (no print statements)
    "TRY",   # tryceratops
]
